--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/ROI_Storage.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/ROI_Storage.html
@@ -262,13 +262,14 @@ class ROIs():
 
     def printContentsDictMasks(self):
         print(&#34;Contents of self.dictMasks&#34;)
-        numMasks = 0
         for key, value in self.dictMasks.items():
+            numMasks = 0
             for item in value:
                 if item.any():
                     numMasks +=1
-
-            print(key, &#39; : &#39;, numMasks)</code></pre>
+                    result = np.where(item == True)
+                    numTrueValues = list(zip(result[1], result[0]))
+            print(key, &#39; : &#39;, numMasks, &#39; Number True Coords: {}&#39;.format(numTrueValues))</code></pre>
 </details>
 </section>
 <section>
@@ -531,13 +532,14 @@ the ROI in the mask in the list corresponding to that image are set to True.</p>
 
     def printContentsDictMasks(self):
         print(&#34;Contents of self.dictMasks&#34;)
-        numMasks = 0
         for key, value in self.dictMasks.items():
+            numMasks = 0
             for item in value:
                 if item.any():
                     numMasks +=1
-
-            print(key, &#39; : &#39;, numMasks)</code></pre>
+                    result = np.where(item == True)
+                    numTrueValues = list(zip(result[1], result[0]))
+            print(key, &#39; : &#39;, numMasks, &#39; Number True Coords: {}&#39;.format(numTrueValues))</code></pre>
 </details>
 <h3>Methods</h3>
 <dl>
@@ -771,13 +773,14 @@ each image in the series.</p></div>
 </summary>
 <pre><code class="python">def printContentsDictMasks(self):
     print(&#34;Contents of self.dictMasks&#34;)
-    numMasks = 0
     for key, value in self.dictMasks.items():
+        numMasks = 0
         for item in value:
             if item.any():
                 numMasks +=1
-
-        print(key, &#39; : &#39;, numMasks)</code></pre>
+                result = np.where(item == True)
+                numTrueValues = list(zip(result[1], result[0]))
+        print(key, &#39; : &#39;, numMasks, &#39; Number True Coords: {}&#39;.format(numTrueValues))</code></pre>
 </details>
 </dd>
 <dt id="WEASEL.Displays.ImageViewers.ComponentsUI.FreeHandROI.ROI_Storage.ROIs.renameDictionaryKey"><code class="name flex">
