--- a/Menus/File.html
+++ b/Menus/File.html
@@ -58,6 +58,13 @@
         pipeline = &#39;File__ResetTreeView&#39;,
         context = True)
 
+    menu.item(
+        label = &#34;Save selections&#34;,
+        shortcut = &#39;Ctrl+A&#39;,
+        tooltip = &#34;Save checked images for future sessions&#34;,
+        pipeline = &#39;File__SaveTreeView&#39;,
+        context = True)
+        
     menu.separator()
 
     menu.item(
@@ -123,6 +130,13 @@
         pipeline = &#39;File__ResetTreeView&#39;,
         context = True)
 
+    menu.item(
+        label = &#34;Save selections&#34;,
+        shortcut = &#39;Ctrl+A&#39;,
+        tooltip = &#34;Save checked images for future sessions&#34;,
+        pipeline = &#39;File__SaveTreeView&#39;,
+        context = True)
+        
     menu.separator()
 
     menu.item(
