--- a/Menus/index.html
+++ b/Menus/index.html
@@ -59,6 +59,10 @@ to building menus through the Weasel Programming Interface</p></div>
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="WEASEL.Menus.XNAT" href="XNAT.html">WEASEL.Menus.XNAT</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 </dl>
 </section>
 <section>
@@ -89,6 +93,7 @@ to building menus through the Weasel Programming Interface</p></div>
 <li><code><a title="WEASEL.Menus.Help" href="Help.html">WEASEL.Menus.Help</a></code></li>
 <li><code><a title="WEASEL.Menus.Tutorial" href="Tutorial.html">WEASEL.Menus.Tutorial</a></code></li>
 <li><code><a title="WEASEL.Menus.View" href="View.html">WEASEL.Menus.View</a></code></li>
+<li><code><a title="WEASEL.Menus.XNAT" href="XNAT.html">WEASEL.Menus.XNAT</a></code></li>
 </ul>
 </li>
 </ul>
