--- a/Pipelines/index.html
+++ b/Pipelines/index.html
@@ -106,6 +106,10 @@
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="WEASEL.Pipelines.File__SaveTreeView" href="File__SaveTreeView.html">WEASEL.Pipelines.File__SaveTreeView</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="WEASEL.Pipelines.Help__WeaselWeb" href="Help__WeaselWeb.html">WEASEL.Pipelines.Help__WeaselWeb</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -186,6 +190,10 @@
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="WEASEL.Pipelines.XNAT__App" href="XNAT__App.html">WEASEL.Pipelines.XNAT__App</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 </dl>
 </section>
 <section>
@@ -228,6 +236,7 @@
 <li><code><a title="WEASEL.Pipelines.File__OpenDICOM" href="File__OpenDICOM.html">WEASEL.Pipelines.File__OpenDICOM</a></code></li>
 <li><code><a title="WEASEL.Pipelines.File__ReadDICOM" href="File__ReadDICOM.html">WEASEL.Pipelines.File__ReadDICOM</a></code></li>
 <li><code><a title="WEASEL.Pipelines.File__ResetTreeView" href="File__ResetTreeView.html">WEASEL.Pipelines.File__ResetTreeView</a></code></li>
+<li><code><a title="WEASEL.Pipelines.File__SaveTreeView" href="File__SaveTreeView.html">WEASEL.Pipelines.File__SaveTreeView</a></code></li>
 <li><code><a title="WEASEL.Pipelines.Help__WeaselWeb" href="Help__WeaselWeb.html">WEASEL.Pipelines.Help__WeaselWeb</a></code></li>
 <li><code><a title="WEASEL.Pipelines.Tutorial__BinaryOperations" href="Tutorial__BinaryOperations.html">WEASEL.Pipelines.Tutorial__BinaryOperations</a></code></li>
 <li><code><a title="WEASEL.Pipelines.Tutorial__GaussianPixelValuesInNewSeries" href="Tutorial__GaussianPixelValuesInNewSeries.html">WEASEL.Pipelines.Tutorial__GaussianPixelValuesInNewSeries</a></code></li>
@@ -248,6 +257,7 @@
 <li><code><a title="WEASEL.Pipelines.View__ImageMultiSliderROI" href="View__ImageMultiSliderROI.html">WEASEL.Pipelines.View__ImageMultiSliderROI</a></code></li>
 <li><code><a title="WEASEL.Pipelines.View__TileAllSubWindows" href="View__TileAllSubWindows.html">WEASEL.Pipelines.View__TileAllSubWindows</a></code></li>
 <li><code><a title="WEASEL.Pipelines.WorkInProgress" href="WorkInProgress/index.html">WEASEL.Pipelines.WorkInProgress</a></code></li>
+<li><code><a title="WEASEL.Pipelines.XNAT__App" href="XNAT__App.html">WEASEL.Pipelines.XNAT__App</a></code></li>
 </ul>
 </li>
 </ul>
