--- a/Displays/ImageViewers/ImageViewerROI.html
+++ b/Displays/ImageViewers/ImageViewerROI.html
@@ -683,7 +683,7 @@ class ImageViewerROI(QMdiSubWindow):
             self.btnResetROI.setIcon(QIcon(QPixmap(RESET_ICON)))
 
             self.btnSaveROI = QPushButton()
-            self.btnSaveROI.setToolTip(&#39;Saves the ROI in DICOM format&#39;)
+            self.btnSaveROI.setToolTip(&#39;Saves the current ROI in DICOM format&#39;)
             self.btnSaveROI.setIcon(QIcon(QPixmap(SAVE_ICON)))
 
             self.btnLoad = QPushButton()
@@ -1529,7 +1529,7 @@ sliders for browsing series of images.</p></div>
             self.btnResetROI.setIcon(QIcon(QPixmap(RESET_ICON)))
 
             self.btnSaveROI = QPushButton()
-            self.btnSaveROI.setToolTip(&#39;Saves the ROI in DICOM format&#39;)
+            self.btnSaveROI.setToolTip(&#39;Saves the current ROI in DICOM format&#39;)
             self.btnSaveROI.setIcon(QIcon(QPixmap(SAVE_ICON)))
 
             self.btnLoad = QPushButton()
@@ -2566,7 +2566,7 @@ Also, sets the contrast and intensity in the associated histogram.</p></div>
         self.btnResetROI.setIcon(QIcon(QPixmap(RESET_ICON)))
 
         self.btnSaveROI = QPushButton()
-        self.btnSaveROI.setToolTip(&#39;Saves the ROI in DICOM format&#39;)
+        self.btnSaveROI.setToolTip(&#39;Saves the current ROI in DICOM format&#39;)
         self.btnSaveROI.setIcon(QIcon(QPixmap(SAVE_ICON)))
 
         self.btnLoad = QPushButton()
