--- a/CoreModules/XMLMenuBuilder.html
+++ b/CoreModules/XMLMenuBuilder.html
@@ -27,7 +27,8 @@
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">from PyQt5.QtWidgets import QAction, QToolTip 
-from PyQt5.QtGui import QCursor, QIcon 
+from PyQt5.QtGui import QCursor, QIcon
+import os
 import sys
 import importlib
 import logging
@@ -65,7 +66,9 @@ def buildUserDefinedToolsMenuItem(weasel, topMenu, item):
         else:
             if item.find(&#39;icon&#39;) is not None:
                 icon = item.find(&#39;icon&#39;).text
-                weasel.menuItem = QAction(QIcon(icon), item.find(&#39;label&#39;).text, weasel)
+                if getattr(sys, &#39;frozen&#39;, False) and hasattr(sys, &#39;_MEIPASS&#39;): base_path = sys._MEIPASS
+                else: base_path = &#34;.&#34;
+                weasel.menuItem = QAction(QIcon(os.path.join(base_path, icon)), item.find(&#39;label&#39;).text, weasel)
             else:
                 weasel.menuItem = QAction(item.find(&#39;label&#39;).text, weasel)
             if item.find(&#39;shortcut&#39;) is not None:
@@ -253,7 +256,9 @@ def buildContextMenu(weasel, menuXMLFile):
         else:
             if item.find(&#39;icon&#39;) is not None:
                 icon = item.find(&#39;icon&#39;).text
-                weasel.menuItem = QAction(QIcon(icon), item.find(&#39;label&#39;).text, weasel)
+                if getattr(sys, &#39;frozen&#39;, False) and hasattr(sys, &#39;_MEIPASS&#39;): base_path = sys._MEIPASS
+                else: base_path = &#34;.&#34;
+                weasel.menuItem = QAction(QIcon(os.path.join(base_path, icon)), item.find(&#39;label&#39;).text, weasel)
             else:
                 weasel.menuItem = QAction(item.find(&#39;label&#39;).text, weasel)
             if item.find(&#39;shortcut&#39;) is not None:
