--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </dd>
 <dt><code class="name"><a title="WEASEL.Displays" href="Displays/index.html">WEASEL.Displays</a></code></dt>
 <dd>
-<div class="desc"><p>Test docstring pdoc3 Display</p></div>
+<div class="desc"><p>TEST docstring pdoc3 Display</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus" href="Menus/index.html">WEASEL.Menus</a></code></dt>
 <dd>
@@ -52,7 +52,7 @@
 </dd>
 <dt><code class="name"><a title="WEASEL.Weasel" href="Weasel.html">WEASEL.Weasel</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Weasel.py is the start-up file of the Weasel application …</p></div>
 </dd>
 </dl>
 </section>
