--- a/Displays/index.html
+++ b/Displays/index.html
@@ -57,7 +57,9 @@
 </dd>
 <dt><code class="name"><a title="WEASEL.Displays.ImageViewers" href="ImageViewers/index.html">WEASEL.Displays.ImageViewers</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Contains modules that support the display of series of DICOM images and individual
+DICOM images (ImageViewer.py)
+and with the facility to draw an ROI …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Displays.MeanROITimeCurveViewer" href="MeanROITimeCurveViewer.html">WEASEL.Displays.MeanROITimeCurveViewer</a></code></dt>
 <dd>
