--- a/Displays/ImageViewers/index.html
+++ b/Displays/ImageViewers/index.html
@@ -43,7 +43,8 @@ and with the facility to draw an ROI on an image (ImageViewerROI.py)
 <dl>
 <dt><code class="name"><a title="WEASEL.Displays.ImageViewers.ComponentsUI" href="ComponentsUI/index.html">WEASEL.Displays.ImageViewers.ComponentsUI</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Custom composite widgets of PyQt5 widgets that are used in the creation
+of the subwindows used to display DICOM images …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Displays.ImageViewers.DataStructures" href="DataStructures/index.html">WEASEL.Displays.ImageViewers.DataStructures</a></code></dt>
 <dd>
