--- a/Displays/ImageViewers/ComponentsUI/index.html
+++ b/Displays/ImageViewers/ComponentsUI/index.html
@@ -59,7 +59,8 @@ PixelValueLabel - A custom, composite widget composed of a label in a
 <dl>
 <dt><code class="name"><a title="WEASEL.Displays.ImageViewers.ComponentsUI.FreeHandROI" href="FreeHandROI/index.html">WEASEL.Displays.ImageViewers.ComponentsUI.FreeHandROI</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>This custom, composite widget allows the user to draw around and/or
+paint a ROI …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Displays.ImageViewers.ComponentsUI.ImageLevelsSpinBoxes" href="ImageLevelsSpinBoxes.html">WEASEL.Displays.ImageViewers.ComponentsUI.ImageLevelsSpinBoxes</a></code></dt>
 <dd>
