--- a/CoreModules/index.html
+++ b/CoreModules/index.html
@@ -29,7 +29,24 @@
 <pre><code class="python">import CoreModules.WriteXMLfromDICOM
 import DICOM.DeveloperTools
 import External.ImagingTools
-import Menus.Tutorial</code></pre>
+import Menus.Tutorial
+
+&#34;&#34;&#34;
+These modules are an important part of the Weasel infrastructure.  Users are
+recommended not to amend these modules.
+
+DICOMFolder.py - Class for reading and summarizing contents of a DICOM folder.
+MenuBuilder.py - Class for building the menus in the menu bar of Weasel.
+StyleSheet.py - Contains Cascading Style Sheet commands for the styling of the PyQt 
+        widgets forming the Weasel GUI in a single string.
+TreeView.py - Class for building a tree view showing a visual representation of DICOM file structure.
+WeaselXMLReader.py - Class for reading, editing and writing the XML file summarising 
+        the contents of a DICOM folder.
+XMLConfigReader.py - Class for reading the Weasel XML configuration file.
+XMLMenuBuilder.py - Module of helper functions for building the menus in the menu bar of the MDI 
+        using the definition in an XML file.
+XMLMenuReader.py - Class for reading the XML file containing the definition of the Weasel menus.
+&#34;&#34;&#34;</code></pre>
 </details>
 </section>
 <section>
@@ -41,7 +58,7 @@ import Menus.Tutorial</code></pre>
 </dd>
 <dt><code class="name"><a title="WEASEL.CoreModules.MenuBuilder" href="MenuBuilder.html">WEASEL.CoreModules.MenuBuilder</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Class for building the menus in the menu bar of Weasel …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.CoreModules.StyleSheet" href="StyleSheet.html">WEASEL.CoreModules.StyleSheet</a></code></dt>
 <dd>
@@ -49,7 +66,8 @@ import Menus.Tutorial</code></pre>
 </dd>
 <dt><code class="name"><a title="WEASEL.CoreModules.TreeView" href="TreeView.html">WEASEL.CoreModules.TreeView</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>class TreeView uses an XML file that describes a DICOM file structure to build a
+tree view showing a visual representation of that file structure.</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.CoreModules.WeaselXMLReader" href="WeaselXMLReader.html">WEASEL.CoreModules.WeaselXMLReader</a></code></dt>
 <dd>
@@ -61,15 +79,16 @@ import Menus.Tutorial</code></pre>
 </dd>
 <dt><code class="name"><a title="WEASEL.CoreModules.XMLConfigReader" href="XMLConfigReader.html">WEASEL.CoreModules.XMLConfigReader</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Class for reading the Weasel XML configuration file</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.CoreModules.XMLMenuBuilder" href="XMLMenuBuilder.html">WEASEL.CoreModules.XMLMenuBuilder</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Module of helper functions for building the menus in the menu bar of the MDI
+using the definition in an XML file.</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.CoreModules.XMLMenuReader" href="XMLMenuReader.html">WEASEL.CoreModules.XMLMenuReader</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Class for reading the XML file containing the definition of the Weasel menus.</p></div>
 </dd>
 </dl>
 </section>
