--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 </dd>
 <dt><code class="name"><a title="WEASEL.CoreModules" href="CoreModules/index.html">WEASEL.CoreModules</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>These modules are an important part of the Weasel infrastructure.
+Users are
+recommended not to amend these modules …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.DICOM" href="DICOM/index.html">WEASEL.DICOM</a></code></dt>
 <dd>
