--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@ recommended not to amend these modules …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Displays" href="Displays/index.html">WEASEL.Displays</a></code></dt>
 <dd>
-<div class="desc"><p>Contains modules support the display of the following in an MDI subwindow: …</p></div>
+<div class="desc"><p>Contains modules that support the display of the following in an MDI subwindow: …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus" href="Menus/index.html">WEASEL.Menus</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Modules that contain the definition of the items forming
+a menu in the Weasel GUI menu bar …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Pipelines" href="Pipelines/index.html">WEASEL.Pipelines</a></code></dt>
 <dd>
