--- a/Menus/index.html
+++ b/Menus/index.html
@@ -79,7 +79,7 @@ XNAT.py - Contains the definition of the items in the XNAT menu,
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus.Edit" href="Edit.html">WEASEL.Menus.Edit</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>A standard Weasel menu providing functions to edit images and series.</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus.File" href="File.html">WEASEL.Menus.File</a></code></dt>
 <dd>
