--- a/Menus/index.html
+++ b/Menus/index.html
@@ -83,7 +83,7 @@ XNAT.py - Contains the definition of the items in the XNAT menu,
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus.File" href="File.html">WEASEL.Menus.File</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>A standard Weasel menu providing functions to access data in DICOM folders.</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus.GettingStarted_Developers" href="GettingStarted_Developers.html">WEASEL.Menus.GettingStarted_Developers</a></code></dt>
 <dd>
