--- a/Menus/index.html
+++ b/Menus/index.html
@@ -96,7 +96,7 @@ to building menus through the Weasel Programming Interface</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus.Help" href="Help.html">WEASEL.Menus.Help</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>A standard Weasel menu providing access to Help</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus.Tutorial" href="Tutorial.html">WEASEL.Menus.Tutorial</a></code></dt>
 <dd>
@@ -104,7 +104,7 @@ to building menus through the Weasel Programming Interface</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus.View" href="View.html">WEASEL.Menus.View</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>A standard Weasel menu providing functions to view images and series.</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus.XNAT" href="XNAT.html">WEASEL.Menus.XNAT</a></code></dt>
 <dd>
