--- a/Menus/index.html
+++ b/Menus/index.html
@@ -108,7 +108,7 @@ to building menus through the Weasel Programming Interface</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus.XNAT" href="XNAT.html">WEASEL.Menus.XNAT</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>A standard Weasel menu providing functions to download and upload DICOM data from/to XNAT.</p></div>
 </dd>
 </dl>
 </section>
