--- a/Menus/index.html
+++ b/Menus/index.html
@@ -30,7 +30,7 @@ Edit.py - Contains the definition of the items in the Edit menu,
 used to edit images and series.
 File.py - Contains the definition of the items in the File menu,
 used to open DICOM folders.
-GettingStarted_Developers.py - Contains the definition of
+GettingStarted_Developers.py - Contains the definitions of
 several top-level menus in the Weasel GUI menu bar.
 GettingStarted_EndUsers.py - Contains the definition of
 several top-level menus in the Weasel GUI menu bar.
@@ -55,7 +55,7 @@ Edit.py - Contains the definition of the items in the Edit menu,
             used to edit images and series.
 File.py - Contains the definition of the items in the File menu, 
             used to open DICOM folders.
-GettingStarted_Developers.py - Contains the definition of 
+GettingStarted_Developers.py - Contains the definitions of 
             several top-level menus in the Weasel GUI menu bar.
 GettingStarted_EndUsers.py - Contains the definition of 
             several top-level menus in the Weasel GUI menu bar.
